--- a/PiacereChef.xcodeproj/xcshareddata/xcschemes/Staging_PiacereChef.xcscheme
+++ b/PiacereChef.xcodeproj/xcshareddata/xcschemes/Staging_PiacereChef.xcscheme
@@ -23,7 +23,7 @@
       </BuildActionEntries>
    </BuildAction>
    <TestAction
-      buildConfiguration = "Staging Debug"
+      buildConfiguration = "Staging_Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
@@ -51,7 +51,7 @@
       </Testables>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Staging Debug"
+      buildConfiguration = "Staging_Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
@@ -72,7 +72,7 @@
       </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
-      buildConfiguration = "Staging Release"
+      buildConfiguration = "Staging_Release"
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
@@ -89,10 +89,10 @@
       </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
-      buildConfiguration = "Staging Debug">
+      buildConfiguration = "Staging_Debug">
    </AnalyzeAction>
    <ArchiveAction
-      buildConfiguration = "Staging Release"
+      buildConfiguration = "Staging_Release"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
 </Scheme>
