--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -16,7 +16,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Build
-      run: swift build -v
-    - name: Run tests
-      run: swift test -v
+    #- name: Build
+      #run: swift build -v
+    #- name: Run tests
+      #run: swift test -v
+    - name: Build and Test
+      run: xcodebuild test -scheme PRDomainModels -destination 'platform=iOS Simulator,OS=15.0,name=iPhone 12 Pro'
