--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -16,10 +16,13 @@ jobs:
     runs-on: macos-latest
 
     steps:
+    - name: Checkout the code
     - uses: actions/checkout@v3
     #- name: Build
       #run: swift build -v
     #- name: Run tests
       #run: swift test -v
+    - name: Switch to xcode 14.1
+      run: sudo xcode-select -s /Applications/Xcode12.0.1.app
     - name: Build and Test
       run: xcodebuild test -scheme PRPersistence -destination 'platform=iOS Simulator,OS=15.2,name=iPhone 12 Pro Max'
