--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -22,7 +22,9 @@ jobs:
       #run: swift build -v
     #- name: Run tests
       #run: swift test -v
-    - name: Switch to xcode 14.1
-      run: sudo xcode-select -s /Applications/Xcode14.1.app
+    - name: Setup Xcode version
+      uses: maxim-lobanov/setup-xcode@v1.5.1
+      with:
+        xcode-version: '14.1'
     - name: Build and Test
       run: xcodebuild test -scheme PRPersistence -destination 'platform=iOS Simulator,OS=15.2,name=iPhone 12 Pro Max'
