--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -23,7 +23,7 @@ jobs:
     #- name: Run tests
       #run: swift test -v
     - name: Setup Xcode version
-      uses: maxim-lobanov/setup-xcode@v1.5.1
+    - uses: maxim-lobanov/setup-xcode@v1.5.1
       with:
         xcode-version: '14.1'
     - name: Build and Test
