--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -17,6 +17,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: Setup Xcode version
+    - uses: maxim-lobanov/setup-xcode@v1.5.1
+      with:
+        xcode-version: '14.1'
     #- name: Build
       #run: swift build -v
     #- name: Run tests
