--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,10 +4,8 @@
 name: Test
 
 on:
-  push:
-    branches: [ "master" ]
   pull_request:
-    branches: [ "master" ]
+    branches: [ "test" ]
 
 jobs:
   build:
@@ -16,7 +14,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Build
-      run: swift build -v
-    - name: Run tests
-      run: swift test -v
+    - uses: maxim-lobanov/setup-xcode@v1.5.1
+      with:
+        xcode-version: '13.2.1'
+    - name: Build and Test
+      run: xcodebuild test -scheme AllTests -destination 'platform=iOS Simulator,OS=15.2,name=iPhone 12 Pro Max'
