--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -22,4 +22,4 @@ jobs:
     #- name: Run tests
       #run: swift test -v
     - name: Build and Test
-      run: xcodebuild test -scheme PRDomainModels -destination 'platform=iOS Simulator,OS=15.0,name=iPhone 12 Pro'
+      run: xcodebuild test -scheme PRDomainModels -destination 'platform=iOS Simulator,OS=15.2,name=iPhone 12 Pro Max'
