--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,6 +16,6 @@ jobs:
     - uses: actions/checkout@v3
     - uses: maxim-lobanov/setup-xcode@v1.5.1
       with:
-        xcode-version: '13.2.1'
+        xcode-version: '>11'
     - name: Build and Test
-      run: xcodebuild test -scheme AllTests -destination 'platform=iOS Simulator,OS=15.2,name=iPhone 12 Pro Max'
+      run: xcodebuild test -scheme AllTests -destination 'platform=iOS Simulator,OS=14,name=iPhone 12 Pro Max'
