--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -18,4 +18,4 @@ jobs:
       with:
         xcode-version: '>11'
     - name: Build and Test
-      run: xcodebuild test -scheme PRDomainModels -destination 'platform=iOS Simulator,OS=15.2,name=iPhone 12 Pro Max'
+      run: xcodebuild test -scheme PRDomainModels -destination 'platform=iOS Simulator,OS=latest,name=iPhone 11 Pro Max'
