--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -4,6 +4,9 @@
 name: Swift
 
 on:
+  push:
+    branches:
+    - 'feature/**'
   pull_request:
     branches: [ "dev" ]
 
@@ -16,6 +19,8 @@ jobs:
     - uses: actions/checkout@v3
     - uses: maxim-lobanov/setup-xcode@v1.5.1
       with:
-        xcode-version: '>11'
+        #xcode-version: '>11'
+        xcode-version: 'latest'
     - name: Build and Test
-      run: xcodebuild test -scheme PRDomainModels -destination 'platform=iOS Simulator,OS=latest,name=iPhone 11 Pro Max'
+      #run: xcodebuild test -scheme PRDomainModels -destination 'platform=iOS Simulator,OS=14,name=iPhone 11 Pro Max'
+      run: xcodebuild test -scheme AllTests -destination 'platform=iOS Simulator,OS=latest,name=iPhone 11 Pro'
