--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -17,12 +17,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Show eligible build destinations for Earendil
-      run: xcodebuild -showdestinations -scheme AllTests
     - uses: maxim-lobanov/setup-xcode@v1.5.1
       with:
-        #xcode-version: '>11'
-        xcode-version: 'latest'
+        xcode-version: '14.1'
+    - name: Show eligible build destinations for AllTests
+      run: xcodebuild -showdestinations -scheme AllTests
     - name: Build and Test
       #run: xcodebuild test -scheme PRDomainModels -destination 'platform=iOS Simulator,OS=14,name=iPhone 11 Pro Max'
       run: xcodebuild test -scheme AllTests -destination 'platform=iOS Simulator,OS=latest,name=iPhone 11 Pro'
