Update Test workflow

--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -24,4 +24,4 @@ jobs:
       run: xcodebuild -showdestinations -scheme AllTests
     - name: Build and Test
       #run: xcodebuild test -scheme PRDomainModels -destination 'platform=iOS Simulator,OS=14,name=iPhone 11 Pro Max'
-      run: xcodebuild test -scheme AllTests -destination 'platform=iOS Simulator,OS=latest,name=iPhone 11 Pro'
+      run: xcodebuild test -scheme AllTests -destination 'platform=iOS,OS=latest,name=Any iOS Device'
