--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -19,7 +19,7 @@ jobs:
     - uses: actions/checkout@v3
     - uses: maxim-lobanov/setup-xcode@v1.5.1
       with:
-        xcode-version: 'latest'
+        xcode-version: '14'
     - name: Show eligible build destinations for AllTests
       run: xcodebuild -showdestinations -scheme AllTests
     - name: Build and Test
