--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -12,7 +12,7 @@ on:
 
 jobs:
   build:
-
+    name: Build and Test PRCore
     runs-on: macos-latest
 
     steps:
@@ -20,8 +20,15 @@ jobs:
     - uses: maxim-lobanov/setup-xcode@v1.5.1
       with:
         xcode-version: 'latest'
-    - name: Show eligible build destinations for AllTests
-      run: xcodebuild -showdestinations -scheme AllTests
-    - name: Build and Test
-      #run: xcodebuild test -scheme PRDomainModels -destination 'platform=iOS Simulator,OS=14,name=iPhone 11 Pro Max'
-      run: xcodebuild clean test -scheme AllTests -destination 'platform=iOS Simulator,OS=latest,name=iPhone 13 Pro'
+      run: xcodebuild test -scheme PRCore -destination 'platform=iOS Simulator,OS=latest,name=iPhone 11 Pro Max'
+  
+  build:
+    name: Build and Test PRDomainModels
+    runs-on: macos-latest
+
+    steps:
+    - uses: actions/checkout@v3
+    - uses: maxim-lobanov/setup-xcode@v1.5.1
+      with:
+        xcode-version: 'latest'
+      run: xcodebuild test -scheme PRDomainModels -destination 'platform=iOS Simulator,OS=latest,name=iPhone 11 Pro Max'
