--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -20,6 +20,7 @@ jobs:
     - uses: maxim-lobanov/setup-xcode@v1.5.1
       with:
         xcode-version: 'latest'
+    - name: Test PRCore
       run: xcodebuild test -scheme PRCore -destination 'platform=iOS Simulator,OS=latest,name=iPhone 11 Pro Max'
   
   build PRDomainModels:
@@ -31,4 +32,5 @@ jobs:
     - uses: maxim-lobanov/setup-xcode@v1.5.1
       with:
         xcode-version: 'latest'
+    - name: Test PRDomainModels
       run: xcodebuild test -scheme PRDomainModels -destination 'platform=iOS Simulator,OS=latest,name=iPhone 11 Pro Max'
