--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -53,7 +53,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Build
-      run: swift build -v
+    - uses: maxim-lobanov/setup-xcode@v1.5.1
+      with:
+        xcode-version: 'latest'
     - name: Run tests
-      run: swift test -v
+      run: xcodebuild test -scheme AllTests -project PiacereChef.xcodeproj -destination 'platform=iOS Simulator,name=iPhone 13 Pro Max,OS=15.2' | xcpretty && exit ${PIPESTATUS[0]}
+
