--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -57,5 +57,5 @@ jobs:
       with:
         xcode-version: 'latest'
     - name: Run tests
-      run: xcodebuild test -scheme AllTests -project PiacereChef.xcodeproj -destination 'platform=iOS Simulator,name=iPhone 13 Pro Max,OS=15.2' | xcpretty && exit ${PIPESTATUS[0]}
+      run: xcodebuild test -scheme AllTests -project PiacereChef.xcodeproj -destination 'platform=iOS Simulator,name=iPhone 13 Pro Max,OS=15.2' | xcpretty && exit ${PIPESTATUS[0]} -v
 
