swift workflow modified

--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -49,7 +49,7 @@ jobs:
 
   build_PiacereChef:
     name: Build and Test PiacereChef
-    runs-on: macos-latest
+    runs-on: macOS-12
 
     steps:
     - uses: actions/checkout@v3
